@@ -1,3 +1,7 @@
+Sun Sep 11 05:23:14 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
+
+	* lib/matrix.rb: Deal with subclasses of Matrix [redmine #5307]
+
 Sat Sep 10 13:38:20 2011  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>
 
 	* dir.c (dir_s_aref):
